fixing spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -10265,6 +10265,7 @@ body {
 }
 
 .projects-section {
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
   padding: 10rem 0;
 }
 .projects-section .featured-text {
